# SIEM-Assistant-MVP

./: README.md  app.py  pyproject.toml  test_elasticsearch.py
Integrations/: active_response.py  elasticsearch_client.py  kibana_sample_loader.py  wazuh_client.py
components/: chat_interface.py  proactive_alerts.py  query_explainer.py
config/: elasticsearch_config.py  space_security_config.json  wazuh_config.py
pages/: 1_space_security.py
space_security/: ground_station_monitor.py  mission_timeline_correlator.py  satellite_comm_analyzer.py  supply_chain_monitor.py
utils/: __init__.py  chat_manager.py  gemini_client.py  mock_data.py  mock_wazuh_client.py  nlp_processor.py  query_executor.py  report_generator.py  threat_analyzer.py
